// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bordered TableGrid renders properly 1`] = `
<div
  class="table-grid-pf bordered"
  id="table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort test-class "
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Column 1
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Column 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    />
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    >
      <div>
        <span>
          test 1
        </span>
        <span>
          and two
        </span>
      </div>
    </div>
  </div>
  <div
    class="table-grid-pf-body test-grid-body"
    id="test-grid-body"
  >
    <div
      class="table-grid-pf-row test-grid-row row"
      id="test-grid-row"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class="test-col1 "
        id="test-col-1"
      >
        item 1 column 1
      </div>
      <div
        class="test-col2 "
        id="test-col-2"
      >
        item 1 column 2
      </div>
      <div
        class="test-col3 "
        id="test-col-3"
      >
        item 1 column 3
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 1 column 4
      </div>
    </div>
    <div
      class="table-grid-pf-row row"
      id="test-grid-row-2"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class=""
        id="test-row-2-col-1"
      >
        item 2 column 1
      </div>
      <div
        class="test-col2 "
        id="two-children"
      >
        <span>
          item 1
        </span>
        <span>
          column 2
        </span>
      </div>
      <div
        class="test-col3 "
        id="icon-name"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-error-circle-o"
        />
        Danger
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 2 column 4
      </div>
    </div>
  </div>
</div>
`;

exports[`TableGrid renders properly 1`] = `
<div
  class="table-grid-pf bordered"
  id="table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort test-class "
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Column 1
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Column 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    />
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    >
      <div>
        <span>
          test 1
        </span>
        <span>
          and two
        </span>
      </div>
    </div>
  </div>
  <div
    class="table-grid-pf-body test-grid-body"
    id="test-grid-body"
  >
    <div
      class="table-grid-pf-row test-grid-row row"
      id="test-grid-row"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class="test-col1 "
        id="test-col-1"
      >
        item 1 column 1
      </div>
      <div
        class="test-col2 "
        id="test-col-2"
      >
        item 1 column 2
      </div>
      <div
        class="test-col3 "
        id="test-col-3"
      >
        item 1 column 3
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 1 column 4
      </div>
    </div>
    <div
      class="table-grid-pf-row row"
      id="test-grid-row-2"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class=""
        id="test-row-2-col-1"
      >
        item 2 column 1
      </div>
      <div
        class="test-col2 "
        id="two-children"
      >
        <span>
          item 1
        </span>
        <span>
          column 2
        </span>
      </div>
      <div
        class="test-col3 "
        id="icon-name"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-error-circle-o"
        />
        Danger
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 2 column 4
      </div>
    </div>
  </div>
</div>
`;

exports[`TableGrid with Cell select renders properly 1`] = `
<div
  class="table-grid-pf bordered cell-select"
  id="table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort test-class "
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Column 1
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Column 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    />
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    >
      <div>
        <span>
          test 1
        </span>
        <span>
          and two
        </span>
      </div>
    </div>
  </div>
  <div
    class="table-grid-pf-body test-grid-body"
    id="test-grid-body"
  >
    <div
      class="table-grid-pf-row test-grid-row row"
      id="test-grid-row"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class="test-col1 "
        id="test-col-1"
      >
        <span
          class="table-grid-pf-col"
        >
          item 1 column 1
        </span>
      </div>
      <div
        class="test-col2 "
        id="test-col-2"
      >
        <span
          class="table-grid-pf-col active"
        >
          item 1 column 2
        </span>
      </div>
      <div
        class="test-col3 "
        id="test-col-3"
      >
        <span
          class="table-grid-pf-col"
        >
          item 1 column 3
        </span>
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        <span
          class="table-grid-pf-col"
        >
          item 1 column 4
        </span>
      </div>
    </div>
    <div
      class="table-grid-pf-row row"
      id="test-grid-row-2-selected"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class=""
        id="test-row-2-col-1"
      >
        <span
          class="table-grid-pf-col"
        >
          item 2 column 1
        </span>
      </div>
      <div
        class="test-col2 "
        id="two-children"
      >
        <span
          class="table-grid-pf-col"
        >
          <span>
            item 1
          </span>
          <span>
            column 2
          </span>
        </span>
      </div>
      <div
        class="test-col3 "
        id="icon-name"
      >
        <span
          class="table-grid-pf-col"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-error-circle-o"
          />
          Danger
        </span>
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        <span
          class="table-grid-pf-col"
        >
          item 2 column 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableGrid with Checkbox select renders properly 1`] = `
<div
  class="table-grid-pf bordered checkbox-select"
  id="table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to deselect all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-check-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap active-sort test-class "
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Column 1
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Column 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    />
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    >
      <div>
        <span>
          test 1
        </span>
        <span>
          and two
        </span>
      </div>
    </div>
  </div>
  <div
    class="table-grid-pf-body test-grid-body"
    id="test-grid-body"
  >
    <div
      class="table-grid-pf-row test-grid-row row"
      id="test-grid-row"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="test arial label"
          type="checkbox"
        />
      </div>
      <div
        class="test-col1 "
        id="test-col-1"
      >
        <span
          class="table-grid-pf-col"
        >
          item 1 column 1
        </span>
      </div>
      <div
        class="test-col2 "
        id="test-col-2"
      >
        <span
          class="table-grid-pf-col active"
        >
          item 1 column 2
        </span>
      </div>
      <div
        class="test-col3 "
        id="test-col-3"
      >
        <span
          class="table-grid-pf-col"
        >
          item 1 column 3
        </span>
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        <span
          class="table-grid-pf-col"
        >
          item 1 column 4
        </span>
      </div>
    </div>
    <div
      class="table-grid-pf-row row"
      id="test-grid-row-2-selected"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class=""
        id="test-row-2-col-1"
      >
        <span
          class="table-grid-pf-col"
        >
          item 2 column 1
        </span>
      </div>
      <div
        class="test-col2 "
        id="two-children"
      >
        <span
          class="table-grid-pf-col"
        >
          <span>
            item 1
          </span>
          <span>
            column 2
          </span>
        </span>
      </div>
      <div
        class="test-col3 "
        id="icon-name"
      >
        <span
          class="table-grid-pf-col"
        >
          <span
            aria-hidden="true"
            class="pficon pficon-error-circle-o"
          />
          Danger
        </span>
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        <span
          class="table-grid-pf-col"
        >
          item 2 column 4
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TableGrid with Row select renders properly 1`] = `
<div
  class="table-grid-pf bordered row-select"
  id="table-grid"
>
  <div
    class="table-grid-pf-head row"
  >
    <div
      class="table-grid-pf-column-header text-nowrap active-sort test-class "
      id="title"
    >
      <button
        class="btn btn-link"
        type="button"
      >
        Column 1
        <span
          aria-hidden="true"
          class="pficon pficon-sort-common-asc table-grid-pf-header-sort-arrow"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Column 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    />
    <div
      class="table-grid-pf-column-header text-nowrap descending "
    >
      <div>
        <span>
          test 1
        </span>
        <span>
          and two
        </span>
      </div>
    </div>
  </div>
  <div
    class="table-grid-pf-body test-grid-body"
    id="test-grid-body"
  >
    <div
      class="table-grid-pf-row test-grid-row row"
      id="test-grid-row"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class="test-col1 "
        id="test-col-1"
      >
        item 1 column 1
      </div>
      <div
        class="test-col2 "
        id="test-col-2"
      >
        item 1 column 2
      </div>
      <div
        class="test-col3 "
        id="test-col-3"
      >
        item 1 column 3
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 1 column 4
      </div>
    </div>
    <div
      class="table-grid-pf-row active row"
      id="test-grid-row-2-selected"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class=""
        id="test-row-2-col-1"
      >
        item 2 column 1
      </div>
      <div
        class="test-col2 "
        id="two-children"
      >
        <span>
          item 1
        </span>
        <span>
          column 2
        </span>
      </div>
      <div
        class="test-col3 "
        id="icon-name"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-error-circle-o"
        />
        Danger
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 2 column 4
      </div>
    </div>
    <div
      class="table-grid-pf-row row"
      id="test-grid-row-3"
    >
      <div
        class="table-grid-pf-checkbox"
      >
        <input
          aria-label="Select"
          type="checkbox"
        />
      </div>
      <div
        class=""
        id="test-row-3-col-1"
      >
        item 3 column 1
      </div>
      <div
        class="test-col3 "
        id="two-children"
      >
        <span>
          item 3
        </span>
        <span>
          column 2
        </span>
      </div>
      <div
        class="test-col3 "
        id="icon-name"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-error-circle-o"
        />
        Danger
      </div>
      <div
        class="test-col4 "
        id="test-col-4"
      >
        item 3 column 4
      </div>
    </div>
  </div>
</div>
`;

exports[`TableGridHead renders options properly 1`] = `
<div
  class="table-grid-pf bordered checkbox-select"
  id="table-grid"
>
  <div
    class="table-grid-pf-head row"
    id="all-selected-no-checkbox"
  >
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="none-selected"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to select all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-square-o"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="all-selected"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to deselect all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-check-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="partial-selected"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to deselect all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-minus-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="custom-tip"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Click to deselect all"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-check-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="none-selected-custom-sr-text"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Test No Selected SR Text"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-square-o"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="all-selected-custom-sr-text"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Test All Selected SR Text"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-check-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
  <div
    class="table-grid-pf-head row"
    id="partial-selected-custom-sr-text"
  >
    <div
      class="table-grid-pf-checkbox"
    >
      <button
        aria-label="Test Partial Selected SR Text"
        class="btn btn-link"
        type="button"
      >
        <span
          aria-hidden="true"
          class="fa fa-minus-square"
        />
      </button>
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 1
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 2
    </div>
    <div
      class="table-grid-pf-column-header text-nowrap "
    >
      Col 3
    </div>
  </div>
</div>
`;
